[Feat] Create users and post visits view

--- a/lang/de.json
+++ b/lang/de.json
@@ -7,8 +7,11 @@
     "API Design & Development": "API-Design & Entwicklung",
     "About me": "Über mich",
     "Actions": "Aktionen",
+    "Admin": "Admin",
+    "All languages": "Alle Sprachen",
     "All rights reserved.": "Alle Rechte vorbehalten.",
     "Appearance": "Aussehen",
+    "Are you sure you want to delete this comment? This action cannot be undone.": "Bist du sicher, dass du diesen Kommentar löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden.",
     "Are you sure?": "Bist du sicher?",
     "Back to all Categories": "Zurück zu allen Kategorien",
     "Back to all Tags": "Zurück zu allen Tags",
@@ -29,6 +32,8 @@
     "Category updated successfully": "Kategorie erfolgreich aktualisiert",
     "Check your email to confirm your subscription.": "Überprüfen Sie Ihre E-Mail, um Ihr Abonnement zu bestätigen.",
     "Clean code, testing strategies, and development workflows": "Sauberer Code, Teststrategien und Entwicklungsabläufe",
+    "Comment deleted successfully": "Kommentar erfolgreich gelöscht",
+    "Comment deleted successfully!": "Kommentar erfolgreich gelöscht!",
     "Comment text": "Kommentartext",
     "Comments": "Kommentare",
     "Confirm subscription": "Abonnement bestätigen",
@@ -39,23 +44,34 @@
     "Create Category": "Kategorie erstellen",
     "Create Post": "Beitrag erstellen",
     "Create Tag": "Tag erstellen",
+    "Create User": "Benutzer erstellen",
     "Created": "Erstellt",
     "Database & Cache": "Datenbank & Cache",
     "Database Optimization": "Datenbankoptimierung",
     "Dear": "Sehr geehrte\/r",
     "Delete": "Löschen",
+    "Delete Comment": "Kommentar löschen",
+    "Delete comment": "Kommentar löschen",
+    "Deleting...": "Löschen...",
     "Design Patterns": "Entwurfsmuster",
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
+    "Dominik Jasiński": "Dominik Jasiński",
+    "E-mail": "E-Mail",
+    "Email": "E-Mail",
+    "English": "Englisch",
     "Enter a unique key to link translations": "Geben Sie einen eindeutigen Schlüssel ein, um Übersetzungen zu verknüpfen",
     "Enter your email": "Geben Sie Ihre E-Mail ein",
+    "Failed to delete comment": "Fehler beim Löschen des Kommentars",
     "Featured Articles": "Ausgewählte Artikel",
     "Forgot password?": "Passwort vergessen?",
     "Fullstack Development": "Fullstack Development",
+    "German": "Deutsch",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Erhalten Sie Benachrichtigungen über neue Artikel und Ressourcen zur PHP-Entwicklung und DevOps-Praktiken",
     "Home": "Startseite",
     "I respect your privacy. Unsubscribe at any time": "Ich respektiere Ihre Privatsphäre. Sie können sich jederzeit abmelden",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Ich bin ein begeisterter PHP-Entwickler mit 3 Jahren Berufserfahrung in Laravel und Symfony-Frameworks. Ich spezialisiere mich auf das Entwickeln robuster Webanwendungen und die Umsetzung von DevOps-Praktiken. Ich habe außerdem umfassende Erfahrung in moderner JavaScript-Entwicklung mit React und Vue.js, um responsive und interaktive Benutzeroberflächen zu erstellen.",
+    "IP Address": "IP-Adresse",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "If you did not request this email, you can safely ignore it.": "Wenn Sie diese E-Mail nicht erwartet haben, können Sie sie ignorieren.",
     "If you did not subscribe, you can ignore this email.": "Wenn Sie sich nicht angemeldet haben, können Sie diese E-Mail ignorieren.",
@@ -72,8 +88,10 @@
     "Manage Categories": "Kategorien verwalten",
     "Manage Posts": "Beiträge verwalten",
     "Manage Tags": "Tags verwalten",
+    "Manage Users": "Benutzer verwalten",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Frontend-Technologien übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung. Mein Full-Stack-Ansatz ermöglicht es mir, vollständige Lösungen von der Datenbank bis zur Benutzeroberfläche zu erstellen.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
+    "Name": "Name",
     "New post on the blog!": "Neuer Beitrag im Blog!",
     "Newsletter Confirmation Mail": "Bestätigung des Newsletter-Abonnements",
     "Newsletter Confirmed": "Newsletter-Abonnement bestätigt",
@@ -83,8 +101,11 @@
     "Next page": "Nächste Seite",
     "No posts found": "Keine Beiträge gefunden",
     "No tags found": "Keine Tags gefunden",
+    "No users found": "Keine Benutzer gefunden",
+    "No visits found": "Keine Besuche gefunden",
     "Oldest": "Älteste",
     "PHP": "PHP",
+    "PHP & DevOps": "PHP & DevOps",
     "PHP & DevOps Blog": "PHP & DevOps Blog",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "PHP-Entwickler & DevOps-Ingenieur",
@@ -94,6 +115,9 @@
     "Password": "Passwort",
     "Performance Optimization": "Leistungsoptimierung",
     "Pick a date": "Datum auswählen",
+    "Polish": "Polnisch",
+    "Post": "Beitrag",
+    "Post Visits": "Beitragsbesuche",
     "Post created successfully": "Beitrag erfolgreich erstellt",
     "Post deleted successfully": "Beitrag erfolgreich gelöscht",
     "Post updated successfully": "Beitrag erfolgreich aktualisiert",
@@ -105,11 +129,13 @@
     "Profile": "Profil",
     "Publish at": "Veröffentlichen am",
     "Query Performance": "Abfrageleistung",
+    "Read article": "Artikel lesen",
     "Read more": "Mehr lesen",
     "Read more about": "Mehr über",
     "Read the Blog": "Blog lesen",
     "Redis": "Redis",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Verantwortlich für die Entwicklung und Wartung von Webanwendungen mit Laravel und React. Implementierung von DevOps-Praktiken einschließlich Docker-Containerisierung, CI\/CD-Pipelines und automatisierter Tests. Leitung technischer Entscheidungen und Mentoring von Junior-Entwicklern. Optimierung der Anwendungsleistung und Sicherstellung der Codequalität durch Code-Reviews und Best Practices.",
+    "Role": "Rolle",
     "Save Category": "Kategorie speichern",
     "Save Post": "Beitrag speichern",
     "Save Tag": "Tag speichern",
@@ -117,6 +143,7 @@
     "Search posts...": "Beiträge suchen...",
     "Select a category": "Kategorie auswählen",
     "Select a language": "Sprache auswählen",
+    "Select language": "Sprache auswählen",
     "Select tags...": "Tags auswählen...",
     "Settings": "Einstellungen",
     "Sort by": "Sortieren nach",
@@ -135,12 +162,16 @@
     "Thank you for confirming your newsletter subscription!": "Vielen Dank für die Bestätigung Ihres Newsletter-Abonnements!",
     "Thank you for subscribing to the newsletter!": "Vielen Dank für Ihr Abonnement des Newsletters!",
     "Thank you for your time.": "Vielen Dank für Ihre Zeit.",
+    "The category field is required": "Das Kategoriefeld ist erforderlich",
     "The email field is required": "Das E-Mail-Feld ist erforderlich",
     "The email is already subscribed": "Diese E-Mail ist bereits abonniert",
     "The email must be a valid email address": "Die E-Mail muss eine gültige E-Mail-Adresse sein",
+    "The language field is required": "Das Sprachfeld ist erforderlich",
+    "The language must be one of: ": "Die Sprache muss eine der folgenden sein: ",
     "This action cannot be undone. This will permanently delete this category.": "Diese Aktion kann nicht rückgängig gemacht werden. Diese Kategorie wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this post.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Beitrag wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this tag.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieses Tag wird dauerhaft gelöscht.",
+    "This action cannot be undone. This will permanently delete this user.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Benutzer wird dauerhaft gelöscht.",
     "This email was sent to": "Diese E-Mail wurde gesendet an",
     "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Durch diesen Blog teile ich meine Erfahrungen, Best Practices und Einblicke in die PHP-Entwicklung, JavaScript-Frameworks und DevOps-Methoden. Ob Sie Anfänger oder erfahrener Entwickler sind, hoffe ich, dass Sie wertvolle Inhalte finden, die Ihnen bei Ihrer eigenen technischen Reise helfen.",
     "Title": "Titel",
@@ -150,10 +181,16 @@
     "Translation Key": "Übersetzungsschlüssel",
     "Unsubscribe": "Abmelden",
     "Unsubscribed from newsletter": "Abbestellung des Newsletters",
+    "User": "Benutzer",
+    "User Agent": "Benutzer-Agent",
+    "Users": "Benutzer",
     "View all": "Alle anzeigen",
+    "Visited At": "Besucht am",
+    "Visits": "Besuche",
     "Write your comment here...": "Schreiben Sie Ihren Kommentar hier...",
     "You are already subscribed to our newsletter.": "Sie sind bereits für unseren Newsletter angemeldet.",
     "You are already subscribed!": "Sie sind bereits angemeldet!",
+    "You have not created any posts yet.": "Sie haben noch keine Beiträge erstellt.",
     "You have not created any tags yet.": "Sie haben noch keine Tags erstellt.",
     "You have successfully subscribed to our newsletter!": "Sie haben sich erfolgreich für unseren Newsletter angemeldet!",
     "You have successfully unsubscribed from our newsletter.": "Sie haben sich erfolgreich von unserem Newsletter abgemeldet.",
