--- a/lang/en.json
+++ b/lang/en.json
@@ -7,8 +7,11 @@
     "API Design & Development": "API Design & Development",
     "About me": "About me",
     "Actions": "Actions",
+    "Admin": "Admin",
+    "All languages": "All languages",
     "All rights reserved.": "All rights reserved.",
     "Appearance": "Appearance",
+    "Are you sure you want to delete this comment? This action cannot be undone.": "Are you sure you want to delete this comment? This action cannot be undone.",
     "Are you sure?": "Are you sure?",
     "Back to all Categories": "Back to all Categories",
     "Back to all Tags": "Back to all Tags",
@@ -29,6 +32,8 @@
     "Category updated successfully": "Category updated successfully",
     "Check your email to confirm your subscription.": "Check your email to confirm your subscription.",
     "Clean code, testing strategies, and development workflows": "Clean code, testing strategies, and development workflows",
+    "Comment deleted successfully": "Comment deleted successfully",
+    "Comment deleted successfully!": "Comment deleted successfully!",
     "Comment text": "Comment text",
     "Comments": "Comments",
     "Confirm subscription": "Confirm subscription",
@@ -39,23 +44,34 @@
     "Create Category": "Create Category",
     "Create Post": "Create Post",
     "Create Tag": "Create Tag",
+    "Create User": "Create User",
     "Created": "Created",
     "Database & Cache": "Database & Cache",
     "Database Optimization": "Database Optimization",
     "Dear": "Dear",
     "Delete": "Delete",
+    "Delete Comment": "Delete Comment",
+    "Delete comment": "Delete comment",
+    "Deleting...": "Deleting...",
     "Design Patterns": "Design Patterns",
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
+    "Dominik Jasiński": "Dominik Jasiński",
+    "E-mail": "E-mail",
+    "Email": "Email",
+    "English": "English",
     "Enter a unique key to link translations": "Enter a unique key to link translations",
     "Enter your email": "Enter your email",
+    "Failed to delete comment": "Failed to delete comment",
     "Featured Articles": "Featured Articles",
     "Forgot password?": "Forgot password?",
     "Fullstack Development": "Fullstack Development",
+    "German": "German",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
     "Home": "Home",
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.",
+    "IP Address": "IP Address",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "If you did not request this email, you can safely ignore it.": "If you did not request this email, you can safely ignore it.",
     "If you did not subscribe, you can ignore this email.": "If you did not subscribe, you can ignore this email.",
@@ -72,8 +88,10 @@
     "Manage Categories": "Manage Categories",
     "Manage Posts": "Manage Posts",
     "Manage Tags": "Manage Tags",
+    "Manage Users": "Manage Users",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
+    "Name": "Name",
     "New post on the blog!": "New post on the blog!",
     "Newsletter Confirmation Mail": "Newsletter Confirmation Mail",
     "Newsletter Confirmed": "Newsletter Confirmed",
@@ -83,8 +101,11 @@
     "Next page": "Next page",
     "No posts found": "No posts found",
     "No tags found": "No tags found",
+    "No users found": "No users found",
+    "No visits found": "No visits found",
     "Oldest": "Oldest",
     "PHP": "PHP",
+    "PHP & DevOps": "PHP & DevOps",
     "PHP & DevOps Blog": "PHP & DevOps Blog",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "PHP Developer & DevOps Engineer",
@@ -94,6 +115,9 @@
     "Password": "Password",
     "Performance Optimization": "Performance Optimization",
     "Pick a date": "Pick a date",
+    "Polish": "Polish",
+    "Post": "Post",
+    "Post Visits": "Post Visits",
     "Post created successfully": "Post created successfully",
     "Post deleted successfully": "Post deleted successfully",
     "Post updated successfully": "Post updated successfully",
@@ -105,11 +129,13 @@
     "Profile": "Profile",
     "Publish at": "Publish at",
     "Query Performance": "Query Performance",
+    "Read article": "Read article",
     "Read more": "Read more",
     "Read more about": "Read more about",
     "Read the Blog": "Read the Blog",
     "Redis": "Redis",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.",
+    "Role": "Role",
     "Save Category": "Save Category",
     "Save Post": "Save Post",
     "Save Tag": "Save Tag",
@@ -117,6 +143,7 @@
     "Search posts...": "Search posts...",
     "Select a category": "Select a category",
     "Select a language": "Select a language",
+    "Select language": "Select language",
     "Select tags...": "Select tags...",
     "Settings": "Settings",
     "Sort by": "Sort by",
@@ -135,12 +162,16 @@
     "Thank you for confirming your newsletter subscription!": "Thank you for confirming your newsletter subscription!",
     "Thank you for subscribing to the newsletter!": "Thank you for subscribing to the newsletter!",
     "Thank you for your time.": "Thank you for your time.",
+    "The category field is required": "The category field is required",
     "The email field is required": "The email field is required",
     "The email is already subscribed": "The email is already subscribed",
     "The email must be a valid email address": "The email must be a valid email address",
+    "The language field is required": "The language field is required",
+    "The language must be one of: ": "The language must be one of: ",
     "This action cannot be undone. This will permanently delete this category.": "This action cannot be undone. This will permanently delete this category.",
     "This action cannot be undone. This will permanently delete this post.": "This action cannot be undone. This will permanently delete this post.",
     "This action cannot be undone. This will permanently delete this tag.": "This action cannot be undone. This will permanently delete this tag.",
+    "This action cannot be undone. This will permanently delete this user.": "This action cannot be undone. This will permanently delete this user.",
     "This email was sent to": "This email was sent to",
     "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.",
     "Title": "Title",
@@ -150,10 +181,16 @@
     "Translation Key": "Translation Key",
     "Unsubscribe": "Unsubscribe",
     "Unsubscribed from newsletter": "Unsubscribed from newsletter",
+    "User": "User",
+    "User Agent": "User Agent",
+    "Users": "Users",
     "View all": "View all",
+    "Visited At": "Visited At",
+    "Visits": "Visits",
     "Write your comment here...": "Write your comment here...",
     "You are already subscribed to our newsletter.": "You are already subscribed to our newsletter.",
     "You are already subscribed!": "You are already subscribed!",
+    "You have not created any posts yet.": "You have not created any posts yet.",
     "You have not created any tags yet.": "You have not created any tags yet.",
     "You have successfully subscribed to our newsletter!": "You have successfully subscribed to our newsletter!",
     "You have successfully unsubscribed from our newsletter.": "You have successfully unsubscribed from our newsletter.",
