--- a/lang/pl.json
+++ b/lang/pl.json
@@ -7,8 +7,11 @@
     "API Design & Development": "Projektowanie i rozwój API",
     "About me": "O mnie",
     "Actions": "Akcje",
+    "Admin": "Admin",
+    "All languages": "Wszystkie języki",
     "All rights reserved.": "Wszelkie prawa zastrzeżone.",
     "Appearance": "Wygląd",
+    "Are you sure you want to delete this comment? This action cannot be undone.": "Czy jesteś pewny, że chcesz usunąć ten komentarz? Ta akcja nie może zostać cofnięta.",
     "Are you sure?": "Jesteś pewien?",
     "Back to all Categories": "Wróć do wszystkich kategorii",
     "Back to all Tags": "Wróć do wszystkich tagów",
@@ -29,6 +32,8 @@
     "Category updated successfully": "Kategoria została pomyślnie zaktualizowana",
     "Check your email to confirm your subscription.": "Sprawdź swój email, aby potwierdzić subskrypcję.",
     "Clean code, testing strategies, and development workflows": "Czysty kod, strategie testowania i przepływy pracy",
+    "Comment deleted successfully": "Komentarz został pomyślnie usunięty",
+    "Comment deleted successfully!": "Komentarz został pomyślnie usunięty!",
     "Comment text": "Treść komentarza",
     "Comments": "Komentarze",
     "Confirm subscription": "Potwierdź subskrypcję",
@@ -39,23 +44,34 @@
     "Create Category": "Stwórz kategorię",
     "Create Post": "Stwórz post",
     "Create Tag": "Stwórz tag",
+    "Create User": "Stwórz użytkownika",
     "Created": "Utworzono",
     "Database & Cache": "Baza danych i pamięć podręczna",
     "Database Optimization": "Optymalizacja bazy danych",
     "Dear": "Drogi",
     "Delete": "Usuń",
+    "Delete Comment": "Usuń komentarz",
+    "Delete comment": "Usuń komentarz",
+    "Deleting...": "Usuwanie...",
     "Design Patterns": "Wzorce projektowe",
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
+    "Dominik Jasiński": "Dominik Jasiński",
+    "E-mail": "E-mail",
+    "Email": "E-mail",
+    "English": "Angielski",
     "Enter a unique key to link translations": "Wpisz unikalny klucz do linkowania tłumaczeń",
     "Enter your email": "Wpisz swój email",
+    "Failed to delete comment": "Nie udało się usunąć komentarza",
     "Featured Articles": "Artykuły wyróżnione",
     "Forgot password?": "Zapomniałeś hasła?",
     "Fullstack Development": "Fullstack Development",
+    "German": "Niemiecki",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Otrzymuj powiadomienia o nowych artykułach i zasobach dotyczących programowania w PHP i praktyk DevOps",
     "Home": "Strona główna",
     "I respect your privacy. Unsubscribe at any time": "Szanuję Twoją prywatność. Możesz zrezygnować w każdej chwili",
     "I'm a passionate PHP developer with 3 years of professional experience in Laravel and Symfony frameworks. I specialize in building robust web applications and implementing DevOps practices. I also have extensive experience in modern JavaScript development, working with React and Vue.js to create responsive and interactive user interfaces.": "Jestem pasjonującym programistą PHP z 3-letnim doświadczeniem w frameworkach Laravel i Symfony. Specjalizuję się w budowaniu niezawodnych aplikacji internetowych i implementacji praktyk DevOps. Mam również bogate doświadczenie w nowoczesnym programowaniu JavaScript, pracując z React i Vue.js do tworzenia responsywnych i interaktywnych interfejsów użytkownika.",
+    "IP Address": "Adres IP",
     "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
     "If you did not request this email, you can safely ignore it.": "Jeśli nie spodziewałeś się tego maila, możesz go zignorować.",
     "If you did not subscribe, you can ignore this email.": "Jeśli nie subskrybowałeś, możesz zignorować ten email.",
@@ -72,8 +88,10 @@
     "Manage Categories": "Zarządzaj kategoriami",
     "Manage Posts": "Zarządzaj postami",
     "Manage Tags": "Zarządzaj tagami",
+    "Manage Users": "Zarządzaj użytkownikami",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie. Moja podejście full-stack pozwala mi budować kompletne rozwiązania od bazy danych do interfejsu użytkownika.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
+    "Name": "Imię",
     "New post on the blog!": "Nowy post na blogu!",
     "Newsletter Confirmation Mail": "Potwierdzenie subskrypcji newslettera",
     "Newsletter Confirmed": "Subskrypcja newslettera potwierdzona",
@@ -83,8 +101,11 @@
     "Next page": "Następna strona",
     "No posts found": "Nie znaleziono żadnych postów",
     "No tags found": "Nie znaleziono tagów",
+    "No users found": "Nie znaleziono użytkowników",
+    "No visits found": "Nie znaleziono odwiedzin",
     "Oldest": "Najstarsze",
     "PHP": "PHP",
+    "PHP & DevOps": "PHP i DevOps",
     "PHP & DevOps Blog": "Blog PHP i DevOps",
     "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
     "PHP Developer & DevOps Engineer": "Programista PHP i inżynier DevOps",
@@ -94,6 +115,9 @@
     "Password": "Hasło",
     "Performance Optimization": "Optymalizacja wydajności",
     "Pick a date": "Wybierz datę",
+    "Polish": "Polski",
+    "Post": "Post",
+    "Post Visits": "Odwiedziny postu",
     "Post created successfully": "Post został pomyślnie utworzony",
     "Post deleted successfully": "Post został pomyślnie usunięty",
     "Post updated successfully": "Post został pomyślnie zaktualizowany",
@@ -105,11 +129,13 @@
     "Profile": "Profil",
     "Publish at": "Opublikuj",
     "Query Performance": "Wydajność zapytań",
+    "Read article": "Czytaj artykuł",
     "Read more": "Czytaj więcej",
     "Read more about": "Czytaj więcej o",
     "Read the Blog": "Czytaj bloga",
     "Redis": "Redis",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Rozwój i utrzymanie aplikacji webowych w Laravel i React. Implementacja praktyk DevOps, w tym konteneryzacji Docker, pipeline'ów CI\/CD i testów automatycznych. Podejmowanie decyzji technicznych i mentoring młodszych programistów. Optymalizacja wydajności aplikacji i zapewnianie jakości kodu poprzez code review i najlepsze praktyki.",
+    "Role": "Rola",
     "Save Category": "Zapisz kategorię",
     "Save Post": "Zapisz post",
     "Save Tag": "Zapisz tag",
@@ -117,6 +143,7 @@
     "Search posts...": "Szukaj postów...",
     "Select a category": "Wybierz kategorię",
     "Select a language": "Wybierz język",
+    "Select language": "Wybierz język",
     "Select tags...": "Wybierz tagi...",
     "Settings": "Ustawienia",
     "Sort by": "Sortuj według",
@@ -135,12 +162,16 @@
     "Thank you for confirming your newsletter subscription!": "Dziękujemy za potwierdzenie subskrypcji newslettera!",
     "Thank you for subscribing to the newsletter!": "Dziękujemy za subskrypcję newslettera!",
     "Thank you for your time.": "Dziękujemy za Twój czas.",
+    "The category field is required": "Pole kategoria jest wymagane",
     "The email field is required": "Pole email jest wymagane",
     "The email is already subscribed": "Ten email jest już zasubskrybowany",
     "The email must be a valid email address": "Email musi być prawidłowym adresem email",
+    "The language field is required": "Pole język jest wymagane",
+    "The language must be one of: ": "Język musi być jednym z:",
     "This action cannot be undone. This will permanently delete this category.": "Tej akcji nie można cofnąć. To trwale usunie tę kategorię.",
     "This action cannot be undone. This will permanently delete this post.": "Tej akcji nie można cofnąć. To trwale usunie ten post.",
     "This action cannot be undone. This will permanently delete this tag.": "Tej akcji nie można cofnąć. To trwale usunie ten tag.",
+    "This action cannot be undone. This will permanently delete this user.": "Tej akcji nie można cofnąć. To trwale usunie tego użytkownika.",
     "This email was sent to": "Ten email został wysłany do",
     "Through this blog, I share my experiences, best practices, and insights into PHP development, JavaScript frameworks, and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Przez ten blog dzielę się swoimi doświadczeniami, najlepszymi praktykami i wglądem do programowania w PHP, JavaScript i praktyk DevOps. Niezależnie od tego, czy jesteś początkującym programistą, czy doświadczonym programistą, mam nadzieję, że znajdziesz wartościowe materiały, które pomogą Ci w swojej podróży technicznej.",
     "Title": "Tytuł",
@@ -150,10 +181,16 @@
     "Translation Key": "Klucz tłumaczenia",
     "Unsubscribe": "Zrezygnuj z subskrypcji",
     "Unsubscribed from newsletter": "Zrezygnowałeś z newslettera",
+    "User": "Użytkownik",
+    "User Agent": "Agent użytkownika",
+    "Users": "Użytkownicy",
     "View all": "Pokaż wszystkie",
+    "Visited At": "Odwiedzony w",
+    "Visits": "Odwiedziny",
     "Write your comment here...": "Napisz swój komentarz tutaj...",
     "You are already subscribed to our newsletter.": "Jesteś już zasubskrybowany do naszego newslettera.",
     "You are already subscribed!": "Jesteś już zasubskrybowany!",
+    "You have not created any posts yet.": "Nie utworzyłeś jeszcze żadnych postów.",
     "You have not created any tags yet.": "Nie utworzyłeś jeszcze żadnych tagów.",
     "You have successfully subscribed to our newsletter!": "Pomyślnie zasubskrybowałeś nasz newsletter!",
     "You have successfully unsubscribed from our newsletter.": "Pomyślnie zrezygnowałeś z naszego newslettera.",
